<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/idTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/txtTitulo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:orientation="horizontal" >

        <ImageView
            android:id="@+id/idImagen"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:contentDescription="@string/str_vacio"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/idDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/contenDesc"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/txtAutor" />

            <TextView
                android:id="@+id/idAutor"
                style="@style/AppBaseTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contenAutor"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/txtCategoria"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/idCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtCategoria"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" >

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtEditorial"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/idEditorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtEditorial"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/idLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="10dp"
        android:text="@string/contenLink"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/idDescargas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtDescargas"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>
